@@ -5,27 +5,24 @@ import static org.molgenis.emx2.ColumnType.AUTO_ID;
 import static org.molgenis.emx2.Constants.*;
 import static org.molgenis.emx2.MutationType.*;
 import static org.molgenis.emx2.sql.SqlDatabase.ADMIN_USER;
-import static org.molgenis.emx2.sql.SqlTypeUtils.applyValidationAndComputed;
 import static org.molgenis.emx2.sql.SqlTypeUtils.getTypedValue;
 
-import java.io.StringReader;
-import java.io.Writer;
 import java.time.LocalDateTime;
 import java.util.*;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 import org.jooq.*;
+import org.jooq.Record;
 import org.molgenis.emx2.*;
 import org.molgenis.emx2.Query;
 import org.molgenis.emx2.Row;
 import org.molgenis.emx2.Table;
 import org.molgenis.emx2.sql.autoid.IdGeneratorService;
-import org.postgresql.copy.CopyManager;
-import org.postgresql.core.BaseConnection;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 public class SqlTable implements Table {
+
   private SqlDatabase db;
   private SqlTableMetadata metadata;
   private TableListener tableListener;
@@ -47,74 +44,6 @@ public class SqlTable implements Table {
     return metadata;
   }
 
-  public void copyOut(Writer writer) {
-    db.getJooq()
-        .connection(
-            connection -> {
-              try {
-                CopyManager cm = new CopyManager(connection.unwrap(BaseConnection.class));
-                String selectQuery =
-                    "select "
-                        + this.getMetadata().getLocalColumnNames().stream()
-                            .map(c -> "\"" + c + "\"")
-                            .collect(Collectors.joining(","))
-                        + " from \""
-                        + getSchema().getMetadata().getName()
-                        + "\".\""
-                        + getName()
-                        + "\"";
-                cm.copyOut(
-                    "COPY (" + selectQuery + " ) TO STDOUT WITH (FORMAT CSV,HEADER )", writer);
-              } catch (Exception e) {
-                throw new SqlMolgenisException("copyOut failed: ", e);
-              }
-            });
-  }
-
-  public void copyIn(Iterable<Row> rows) {
-    db.getJooq()
-        .connection(
-            connection -> {
-              try {
-                CopyManager cm = new CopyManager(connection.unwrap(BaseConnection.class));
-
-                // must be batched
-                StringBuilder tmp = new StringBuilder();
-                tmp.append(
-                    this.getMetadata().getLocalColumnNames().stream()
-                            .map(c -> "\"" + c + "\"")
-                            .collect(Collectors.joining(","))
-                        + "\n");
-                for (Row row : rows) {
-                  StringBuilder line = new StringBuilder();
-                  for (Column c : this.getMetadata().getStoredColumns()) {
-                    if (!row.containsName(c.getName())) {
-                      line.append(",");
-                    } else {
-                      Object value = getTypedValue(c, row);
-                      line.append(value + ",");
-                    }
-                  }
-                  tmp.append(line.substring(0, line.length() - 1) + "\n");
-                }
-
-                String tableName =
-                    "\"" + getSchema().getMetadata().getName() + "\".\"" + getName() + "\"";
-
-                String columnNames =
-                    "("
-                        + this.getMetadata().getLocalColumnNames().stream()
-                            .map(c -> "\"" + c + "\"")
-                            .collect(Collectors.joining(","))
-                        + ")";
-                String sql = "COPY " + tableName + columnNames + " FROM STDIN (FORMAT CSV,HEADER )";
-                cm.copyIn(sql, new StringReader(tmp.toString()));
-              } catch (Exception e) {
-                throw new SqlMolgenisException("copyOut failed: ", e);
-              }
-            });
-  }
-
   @Override
   public int insert(Row... rows) {
     return insert(Arrays.asList(rows));
@@ -122,6 +51,7 @@ public class SqlTable implements Table {
 
   @Override
   public int insert(Iterable<Row> rows) {
+    rowOwnership().validateAndAssignOwnerWhenOmitted(rows);
     try {
       return executeTransaction(db, getSchema().getName(), getName(), rows, INSERT);
     } catch (Exception e) {
@@ -136,6 +66,7 @@ public class SqlTable implements Table {
 
   @Override
   public int update(Iterable<Row> rows) {
+    rowOwnership().validateOwners(rows); // an update keeps the owner the row already has
     try {
       return this.executeTransaction(db, getSchema().getName(), getName(), rows, UPDATE);
     } catch (Exception e) {
@@ -150,11 +81,16 @@ public class SqlTable implements Table {
 
   @Override
   public int save(Iterable<Row> rows) {
+    rowOwnership().validateAndAssignOwnerWhenOmitted(rows);
     try {
       return this.executeTransaction(db, getSchema().getName(), getName(), rows, SAVE);
     } catch (Exception e) {
       throw new SqlMolgenisException("Upsert into table '" + getName() + "' failed", e);
     }
+  }
+
+  private RowOwnership rowOwnership() {
+    return new RowOwnership(getSchema(), metadata);
   }
 
   @Override
@@ -327,16 +263,18 @@ public class SqlTable implements Table {
     SqlTable table = schema.getTable(subclassName.split("\\.")[1]);
     if (UPDATE.equals(transactionType)) {
       List<Column> updateColumns = getUpdateColumns(table, columnsProvided);
-      List<Row> rows =
-          applyValidationAndComputed(
-              table.getMetadata().getColumns(), subclassRows.get(subclassName));
+      SqlRowProcessor rowProcessor = new SqlRowProcessor(table.getMetadata().getColumns());
+      List<Row> rows = subclassRows.get(subclassName);
+      rowProcessor.validateAndCompute(rows);
       count.set(count.get() + table.updateBatch(table, rows, updateColumns));
     } else if (SAVE.equals(transactionType) || INSERT.equals(transactionType)) {
       List<Column> insertColumns = getInsertColumns(table, columnsProvided);
-      List<Row> rows = applyValidationAndComputed(insertColumns, subclassRows.get(subclassName));
+      List<Row> rows = subclassRows.get(subclassName);
+      SqlRowProcessor rowProcessor = new SqlRowProcessor(insertColumns);
+      rowProcessor.validateAndCompute(rows);
       count.set(
           count.get()
-              + table.insertBatch(table, rows, SAVE.equals(transactionType), insertColumns));
+              + table.insertBatch(table, rows, SAVE.equals(transactionType), insertColumns).size());
     } else {
       throw new MolgenisException(
           "Internal error in executeBatch: transaction type "
@@ -354,7 +292,7 @@ public class SqlTable implements Table {
                 !c.isRefback()
                     || (c.isReference()
                         && c.getReferences().stream()
-                            .anyMatch(r -> columnsProvided.contains(r.getName()))))
+                            .anyMatch(r -> columnsProvided.contains(r.getColumnName()))))
         .toList();
   }
 
@@ -368,7 +306,7 @@ public class SqlTable implements Table {
                     || c.getComputed() != null
                     || (c.isReference()
                         ? c.getReferences().stream()
-                            .anyMatch(r -> columnsProvided.contains(r.getName()))
+                            .anyMatch(r -> columnsProvided.contains(r.getColumnName()))
                         : columnsProvided.contains(c.getName())))
         .toList();
   }
@@ -377,27 +315,38 @@ public class SqlTable implements Table {
     return this.tableListener;
   }
 
-  private int insertBatch(
+  private List<Record> insertBatch(
       SqlTable table, List<Row> rows, boolean updateOnConflict, List<Column> updateColumns) {
     boolean inherit = table.getMetadata().getInheritName() != null;
-    int count = 0;
     if (inherit) {
       SqlTable inheritedTable = table.getInheritedTable();
-      count = inheritedTable.insertBatch(inheritedTable, rows, updateOnConflict, updateColumns);
+      List<Record> records =
+          inheritedTable.insertBatch(inheritedTable, rows, updateOnConflict, updateColumns);
+
+      List<Column> autoIdColumns =
+          inheritedTable.getMetadata().getPrimaryKeyColumns().stream()
+              .filter(c -> AUTO_ID.equals(c.getColumnType()))
+              .toList();
+
+      // Copy the generated auto id's from the parent table
+      for (int i = 0; i < records.size(); i++) {
+        copyRecordValuesIntoRows(rows.get(i), records.get(i), autoIdColumns);
+      }
     }
 
     List<Column> columns = getLocalStoredColumns(table, updateColumns);
-    if (columns.size() == 0) return count;
-    List<Field> insertFields =
-        columns.stream().map(c -> c.getJooqField()).collect(Collectors.toList());
+    if (columns.isEmpty()) {
+      return Collections.emptyList();
+    }
+
+    List<Field> insertFields = columns.stream().map(Column::getJooqField).toList();
     InsertValuesStepN<org.jooq.Record> step =
         table.getJooq().insertInto(table.getJooqTable(), insertFields.toArray(new Field[0]));
 
     // add all the rows as steps
     LocalDateTime now = LocalDateTime.now();
     for (Row row : rows) {
-      // get values
-      Map values = getSelectedRowValues(columns, row);
+      Map<String, Object> values = getSelectedRowValues(columns, row);
       if (!inherit) {
         values.put(MG_INSERTEDBY, getActiveUser(table));
         values.put(MG_INSERTEDON, now);
@@ -428,7 +377,13 @@ public class SqlTable implements Table {
       }
     }
 
-    return step.execute();
+    return step.returningResult(table.getMetadata().getPrimaryKeyFields()).fetch();
+  }
+
+  private static void copyRecordValuesIntoRows(Row row, Record from, List<Column> toCopy) {
+    for (Column column : toCopy) {
+      row.set(column.getName(), from.getValue(column.getName()));
+    }
   }
 
   private static String getActiveUser(SqlTable table) {
@@ -502,7 +457,7 @@ public class SqlTable implements Table {
     for (Column key : pkeyFields) {
       if (key.isReference()) {
         for (Reference ref : key.getReferences()) {
-          result.add(ref.getJooqField().eq(row.get(ref.getName(), ref.getPrimitiveType())));
+          result.add(ref.getJooqField().eq(row.get(ref.getColumnName(), ref.getPrimitiveType())));
         }
       } else {
         result.add(key.getJooqField().eq(row.get(key)));
@@ -512,33 +467,51 @@ public class SqlTable implements Table {
   }
 
   @Override
-  public int delete(Iterable<Row> rows) {
+  public int delete(Iterable<Row> rows, boolean strict) {
     long start = System.currentTimeMillis();
 
-    AtomicInteger count = new AtomicInteger(0);
+    AtomicInteger nrDeleted = new AtomicInteger(0);
     try {
       db.tx(
           db2 -> {
-            SqlTable table = (SqlTable) db2.getSchema(getSchema().getName()).getTable(getName());
-
-            // delete in batches
             int batchSize = 1000;
+            int currentBatchSize = 0;
+            int nrRowsToDelete = 0;
+
+            SqlTable table = (SqlTable) db2.getSchema(getSchema().getName()).getTable(getName());
             List<Row> batch = new ArrayList<>();
+
             for (Row row : rows) {
+              nrRowsToDelete++;
               batch.add(row);
-              count.set(count.get() + 1);
-              if (count.get() % batchSize == 0) {
-                deleteBatch(table, batch);
+              currentBatchSize++;
+              if (currentBatchSize % batchSize == 0) {
+                nrDeleted.addAndGet(deleteBatch(table, batch));
                 batch.clear();
+                currentBatchSize = 0;
               }
             }
 
             // delete remaining elements
-            deleteBatch(table, batch);
+            nrDeleted.addAndGet(deleteBatch(table, batch));
 
             // finally delete in superclass
             if (table.getMetadata().getInheritName() != null) {
               table.getInheritedTable().delete(rows);
+            }
+
+            // Validate that we deleted exactly the number of rows we intended to delete
+            if (nrDeleted.get() != nrRowsToDelete && strict) {
+              throw new MolgenisException(
+                  "Delete failed: attempted to delete "
+                      + nrRowsToDelete
+                      + " rows but only deleted "
+                      + nrDeleted.get()
+                      + " row"
+                      + (nrDeleted.get() == 1 ? "" : "s")
+                      + ". Some specified rows do not exist in table "
+                      + getName()
+                      + ". Transaction rolled back.");
             }
 
             // notify handlers
@@ -550,9 +523,8 @@ public class SqlTable implements Table {
       throw new SqlMolgenisException("Delete into table " + getName() + " failed", e);
     }
 
-    log(db.getActiveUser(), getName(), start, count, "deleted");
-
-    return count.get();
+    log(db.getActiveUser(), getName(), start, nrDeleted, "deleted");
+    return nrDeleted.get();
   }
 
   @Override
@@ -579,12 +551,7 @@ public class SqlTable implements Table {
     return query().search(terms);
   }
 
-  @Override
-  public int delete(Row... rows) {
-    return delete(Arrays.asList(rows));
-  }
-
-  private static void deleteBatch(SqlTable table, Collection<Row> rows) {
+  private static int deleteBatch(SqlTable table, Collection<Row> rows) {
     if (!rows.isEmpty()) {
       List<String> keyNames =
           table.getMetadata().getPrimaryKeyFields().stream()
@@ -597,8 +564,10 @@ public class SqlTable implements Table {
             "Delete on table " + table.getName() + " failed: no primary key set");
       }
       Condition whereCondition = table.getWhereConditionForBatchDelete(rows);
-      table.getJooq().deleteFrom(table.getJooqTable()).where(whereCondition).execute();
+      return table.getJooq().deleteFrom(table.getJooqTable()).where(whereCondition).execute();
     }
+
+    return 0;
   }
 
   private DSLContext getJooq() {
@@ -631,7 +600,9 @@ public class SqlTable implements Table {
         if (!ref.isOverlapping()) {
           columnCondition.add(
               ref.getJooqField()
-                  .eq(cast(r.get(ref.getName(), ref.getPrimitiveType()), ref.getJooqField())));
+                  .eq(
+                      cast(
+                          r.get(ref.getColumnName(), ref.getPrimitiveType()), ref.getJooqField())));
         }
       }
     } else if (key.isRefback()) {
